
 * Macro has been deprecated in favor of GoSub.  For redirecting and connected
   line purposes use the following variables instead of their macro equivalents:
   REDIRECTING_SEND_SUB, REDIRECTING_SEND_SUB_ARGS, CONNECTED_LINE_SEND_SUB,
   CONNECTED_LINE_SEND_SUB_ARGS.  For CCSS, use cc_callback_sub instead of
   cc_callback_macro in channel configurations.


AGI
------------------
 * A new channel variable, AGIEXITONHANGUP, has been added which allows
   Asterisk to behave like it did in Asterisk 1.4 and earlier where the
   AGI application would exit immediately after a channel hangup is detected.

 * IPv6 addresses are now supported when using FastAGI (agi://).  Hostnames
   are resolved and each address is attempted in turn until one succeeds or
   all fail.


AMI (Asterisk Manager Interface)
------------------
 * Originate now generates an error response if the extension given is not found
   in the dialplan

 * MixMonitor will now show IDs associated with the mixmonitor upon creating
   them if the i(variable) option is used. StopMixMonitor will accept
   MixMonitorID as an option to close specific MixMonitors.

 * The SIPshowpeer manager action response field "SIP-Forcerport" has been
   updated to include information about peers configured with
   nat=auto_force_rport by returning "A" if auto_force_rport is set and nat is
   detected, and "a" if it is set and nat is not detected. "Y" and "N" are still
   returned if auto_force_rport is not enabled.

 * Hangup now can take a regular expression as the Channel option.  If you want
   to hangup multiple channels, use /regex/ as the Channel option.  Existing
   behavior to hanging up a single channel is unchanged, but if you pass a regex,
   the manager will send you a list of channels back that were hung up.

 * Support for IPv6 addresses has been added.

 * AMI Events can now be documented in the Asterisk source. Note that AMI event